[workspace]
members = [
    "ultros",
    "ultros-db",
    "ultros-api-types",
    "migration",
    "universalis",
    "xiv-gen",
    "xiv-gen-db",
    "ultros-frontend/ultros-client",
    "ultros-frontend/ultros-app",
    "ultros-frontend/ultros-xiv-icons",
    "proc-macros/dumb-csv-macros",
    "proc-macros/field-iterator-macros",
    "dumb-csv",
    "field-iterator",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.7", features = ["ws", "json", "macros"] }
axum-extra = { version = "0.10.3", features = [
    "cookie",
    "cookie-private",
    "typed-header",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3"
futures = "0.3.24"
anyhow = "1.0.72"
leptos = { version = "0.8", default-features = false, features = ["nightly"] }
leptos_axum = { version = "0.8" }
leptos_router = { version = "0.8", default-features = false, features = [
    "nightly",
] }
leptos_meta = { version = "0.8", default-features = false, features = [] }
leptos-use = { version = "0.16.3", features = [] }
chrono = "0.4.42"
itertools = "0.14.0"
image = "0.25.9"
plotters = "0.3.7"
sea-orm = { version = "^1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "^1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
sea-query = "^0.32.0"
yoke = "0.8.1"
xiv-gen = { path = "./xiv-gen", features = [
    "item",
    "item_ui_category",
    "item_search_category",
    "class_job",
    "recipe",
    "recipe_level_table",
    "class_job_category",
    "base_param",
    "item_sort_category",
    "gil_shop",
    "gil_shop_item",
    "e_npc_base",
    "e_npc_resident",
    "special_shop",
    "leve",
    "craft_leve",
    "leve_reward_item",
    "leve_reward_item_group",
    "retainer_task",
    "retainer_task_normal",
    "retainer_task_random",
    "retainer_task_lv_range",
    "retainer_task_parameter",
    "collectables_shop",
    "collectables_shop_item",
    "collectables_shop_reward_scrip",
] }
icondata = "0.6"
icondata_core = "0.1"
leptos_icons = "0.7"
cfg-if = "1.0.0"
git-const = "1.1.0"
gloo-net = { version = "0.6.0", features = ["http", "websocket"] }
dotenvy = "0.15"

[patch.crates-io]
#leptos = { path = "../leptos/leptos" }
# leptos_reactive = { git = "https://github.com/leptos-rs/leptos.git" }
#leptos_reactive = {path = "../leptos/leptos_reactive"}
#leptos_axum = {path = "../leptos/integrations/axum"}
#leptos_router = {path = "../leptos/router"}
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git" } # needed on ARM Mac until pathfinder_simd has new release

[profile.release]
# lto = true
opt-level = "z"
# codegen-units = 1

[profile.dev]
# opt-level = 1
# codegen-units = 256


[profile.sane]
inherits = "release"
codegen-units = 16
lto = false

[profile.fastdev]
inherits = "dev"
opt-level = 1

[[workspace.metadata.leptos]]
name = "ultros"
bin-package = "ultros"
lib-package = "ultros-client"
output-name = "ultros"
# The site root folder is where cargo-leptos generate all output.
# NOTE: It is relative to the workspace root when running in a workspace.
# WARNING: all content of this folder will be erased on a rebuild.
#
# Optional, defaults to "target/site". Env: LEPTOS_SITE_ROOT.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written.
#
# Optional, defaults to "pkg". Env: LEPTOS_SITE_PKG_DIR.
site-pkg-dir = "pkg"

# The source style file. If it ends with _.sass_ or _.scss_ then it will be compiled by `dart-sass`
# into CSS and processed by lightning css. When release is set, then it will also be minified.
#
# Optional. Env: LEPTOS_STYLE_FILE.
style-file = "./ultros/static/main.css"

tailwind-input-file = "style/tailwind.css"

# The browserlist https://browsersl.ist query used for optimizing the CSS.
#
# Optional, defaults to "defaults". Env: LEPTOS_BROWSERQUERY.
browserquery = "defaults"

env = "DEV"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
# assets-dir = "assets"

# The IP and port where the server serves the content. Use it in your server setup.
#
# Optional, defaults to 127.0.0.1:3000. Env: LEPTOS_SITE_ADDR.
site-addr = "127.0.0.1:8080"

# The port number used by the reload server (only used in watch mode).
#
# Optional, defaults 3001. Env: LEPTOS_RELOAD_PORT
reload-port = 3001

# The command used for running end-to-end tests.
#
# Optional. Env: LEPTOS_END2END_CMD.
end2end-cmd = "npm test"

# The directory from which the end-to-end tests are run.
#
# Optional. Env: LEPTOS_END2END_DIR
end2end-dir = "integration"

[profile.dev.build-override]
opt-level = 1
codegen-units = 256

[profile.release.build-override]
opt-level = 3
codegen-units = 256
