[workspace]
members = [
    "ultros",
    "ultros-db",
    "ultros-api-types",
    "ultros-clickhouse",
    "migration",
    "universalis",
    "xiv-gen",
    "xiv-gen-db",
    "ultros-frontend/ultros-client",
    "ultros-frontend/ultros-app",
    "ultros-frontend/ultros-xiv-icons",
    "proc-macros/dumb-csv-macros",
    "proc-macros/field-iterator-macros",
    "proc-macros/xiv-gen-macros",
    "dumb-csv",
    "field-iterator",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["ws", "json", "macros"] }
axum-extra = { version = "0.12.6", features = [
    "cookie",
    "cookie-private",
    "typed-header",
] }
axum-macros = "0.5.1"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
futures = "0.3.32"
anyhow = "1.0.102"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
leptos = { version = "0.8.19", default-features = false, features = ["nightly"] }
leptos_axum = { version = "0.8.9" }
leptos_router = { version = "0.8.13", default-features = false, features = [
    "nightly",
] }
leptos_meta = { version = "0.8.6", default-features = false, features = [] }
leptos-use = { version = "0.18.3", features = [] }
chrono = "0.4.44"
itertools = "0.14.0"
image = "0.25.10"
sea-orm = { version = "^1.1.20", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "^1.1.20", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
sea-query = "^0.32.7"
yoke = "0.8.2"
xiv-gen = { path = "./xiv-gen", features = [
    "item",
    "item_ui_category",
    "item_search_category",
    "class_job",
    "recipe",
    "recipe_level_table",
    "class_job_category",
    "base_param",
    "item_sort_category",
    "gil_shop",
    "gil_shop_item",
    "e_npc_base",
    "e_npc_resident",
    "special_shop",
    "leve",
    "craft_leve",
    "leve_reward_item",
    "leve_reward_item_group",
    "retainer_task",
    "retainer_task_normal",
    "retainer_task_random",
    "retainer_task_lv_range",
    "retainer_task_parameter",
    "collectables_shop",
    "collectables_shop_item",
    "collectables_shop_reward_scrip",
    "topic_select",
    "pre_handler",
    "company_craft_sequence",
    "company_craft_part",
    "company_craft_process",
    "company_craft_supply_item",
    "company_craft_draft_category",
    "company_craft_type",
    "company_craft_draft",
] }
icondata = "0.7"
icondata_core = "0.1"
leptos_icons = "0.7.1"
leptos_i18n = { version = "0.6.2", features = ["cookie"] }
leptos_i18n_build = "0.6.2"
cfg-if = "1.0.4"
gloo-net = { version = "0.7.0", features = ["http", "websocket"] }
dotenvy = "0.15.7"
clickhouse = { version = "0.15.0", features = [
    "chrono",
    "inserter",
    "lz4",
    "rustls-tls-webpki-roots",
    "time",
    "uuid",
] }
dashmap = "6.1"
# Default features pull in `isahc` (libcurl) for sending — we route push delivery
# through the existing `reqwest` client instead so we get embedded webpki-roots
# for TLS and real error messages on failure (web-push collapses isahc errors to
# `WebPushError::Unspecified` and discards the cause).
web-push = { version = "0.11.0", default-features = false }

[patch.crates-io]
#leptos = { path = "../leptos/leptos" }
# leptos_reactive = { git = "https://github.com/leptos-rs/leptos.git" }
#leptos_reactive = {path = "../leptos/leptos_reactive"}
#leptos_axum = {path = "../leptos/integrations/axum"}
#leptos_router = {path = "../leptos/router"}

[profile.release]
# Optimized for size — used by the WASM client bundle (where bytes-on-the-wire matter).
# The server binary uses [profile.server-release] below; see workspace.metadata.leptos.
opt-level = "z"
strip = "debuginfo"

# Server binary profile. cargo-leptos builds the bin with this when set as
# bin-profile-release in workspace.metadata.leptos.
#
# Inherits everything from [profile.release] (opt-level=z, cgu=16, no LTO) which
# happens to be well-tuned for this workspace's generic-heavy code (leptos /
# server_fn / sea-orm / tower). LTO consistently *grew* the binary in tests by
# defeating the linker's parallel-cgu dedup, so we don't override it here.
#
# Delta from release:
#  - debug = "line-tables-only": minimal DWARF — just address→file:line mapping.
#    Sentry/GlitchTip symbolication still gives `file.rs:123 in fn_name` because
#    function names come from the symbol table (preserved through strip-debug)
#    and `:line` comes from the line tables. Skips function args/locals/types
#    that "limited" would also emit, which roughly halves the debug payload.
#    The Dockerfile builder splits debug info into a separate artifact via
#    objcopy and ships only the stripped binary in the runtime image. The
#    unstripped binary is exported via the `debug-files` target stage and
#    uploaded to GlitchTip from CI by glitchtip-cli.
#  - No Cargo-side `strip` override: we want debug info in the build artifact
#    so we can split + upload it; stripping happens in the Dockerfile.
#
# panic = "unwind" preserved so sentry's panic hook can capture and flush.
[profile.server-release]
inherits = "release"
debug = "line-tables-only"

[profile.dev]
# opt-level = 1
# codegen-units = 256


[profile.sane]
inherits = "release"
codegen-units = 16
lto = false

[profile.fastdev]
inherits = "dev"
opt-level = 1

[[workspace.metadata.leptos]]
name = "ultros"
bin-package = "ultros"
# Disambiguate when the bin-package contains multiple [[bin]] targets — the
# ultros crate now ships `clickhouse_backfill`, `clickhouse_parity_check`,
# and `clickhouse_inspect` as one-shot maintenance binaries alongside the
# main server. Leptos only builds the server.
bin-target = "ultros"
lib-package = "ultros-client"
output-name = "ultros"
# Server binary built with the speed-optimized server-release profile;
# WASM client keeps the size-optimized default release profile.
bin-profile-release = "server-release"
# Enable the jemalloc global allocator in release builds — better throughput
# and lower RSS fragmentation under sustained tokio/axum load.
bin-features = ["jemalloc"]
# The site root folder is where cargo-leptos generate all output.
# NOTE: It is relative to the workspace root when running in a workspace.
# WARNING: all content of this folder will be erased on a rebuild.
#
# Optional, defaults to "target/site". Env: LEPTOS_SITE_ROOT.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written.
#
# Optional, defaults to "pkg". Env: LEPTOS_SITE_PKG_DIR.
site-pkg-dir = "pkg"

# The source style file. If it ends with _.sass_ or _.scss_ then it will be compiled by `dart-sass`
# into CSS and processed by lightning css. When release is set, then it will also be minified.
#
# Optional. Env: LEPTOS_STYLE_FILE.
style-file = "./ultros/static/main.css"

tailwind-input-file = "style/tailwind.css"

# The browserlist https://browsersl.ist query used for optimizing the CSS.
#
# Optional, defaults to "defaults". Env: LEPTOS_BROWSERQUERY.
browserquery = "defaults"
tailwind-version = "v3.4.1"

env = "DEV"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
# assets-dir = "assets"

# The IP and port where the server serves the content. Use it in your server setup.
#
# Optional, defaults to 127.0.0.1:3000. Env: LEPTOS_SITE_ADDR.
site-addr = "127.0.0.1:8080"

# The port number used by the reload server (only used in watch mode).
#
# Optional, defaults 3001. Env: LEPTOS_RELOAD_PORT
reload-port = 3001

# The command used for running end-to-end tests.
#
# Optional. Env: LEPTOS_END2END_CMD.
end2end-cmd = "npm test"

# The directory from which the end-to-end tests are run.
#
# Optional. Env: LEPTOS_END2END_DIR
end2end-dir = "integration"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 256
