[package]
name = "crafterstoolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
recipepricecheck = { path = "../recipepricecheck"}
xiv-gen = {path = "../xiv-gen"}
universalis = {path = "../universalis"}
bincode = "2.0.0-rc.1"
flate2 = "1.0.24"
lazy_static = "1.4.0"
futures = "0.3.23"
anyhow = "1.0.62"
serde-error = "0.1.2"
fixed_decimal = "0.4.0"
icu = {version = "1.0.0-beta1", features = ["serde"]}
icu_testdata = "1.0.0-beta1"
writeable = "0.4.1"
log = "0.4.17"
xiv-crafting-sim = {git = "https://github.com/akarras/NotRanged.github.io/"}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tokio = {version = "1.19.2", features = ["full"]}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
tokio = {version = "1.19.2", default-features = false, features = ["sync"]}

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]