[package]
name = "recipepricecheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universalis = {path = "../universalis"}
xivapi = {path = "../xivapi"}
clap = {version = "3.2.5", features = ["derive"]}
tokio = "1"
thiserror = "1.0.31"
itertools = "0"
num-format = "0.4.0"