[package]
name = "ultros-api-types"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
rkyv = { version = "0.7.42", features = ["validation", "size_64", "hashbrown"], default-features = false, optional = true }

[features]
default = []
rkyv = ["dep:rkyv", "chrono/rkyv-64", "chrono/rkyv-validation"]

[dev-dependencies]
serde_json = { workspace = true }
