[package]
name = "ultros-db"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm.workspace = true
universalis = {path = "../universalis"}
anyhow = "1.0.63"
serde = {version = "1.0.144", features = ["derive"]}
tracing = {workspace = true}
futures = {workspace = true}
migration = {path = "../migration"}
sea-query.workspace = true
chrono = "0.4.23"
itertools.workspace = true
yoke.workspace = true
thiserror = "1.0.38"
ultros-api-types = {path = "../ultros-api-types"}
metrics = "0.22.0"
dotenvy = "0.15.7"
