[package]
name = "ultros-db"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm.workspace = true
universalis = {path = "../universalis"}
anyhow = "1.0.100"
serde = {version = "1.0.228", features = ["derive"]}
tracing = {workspace = true}
futures = {workspace = true}
migration = {path = "../migration"}
sea-query.workspace = true
chrono = "0.4.42"
itertools.workspace = true
yoke.workspace = true
thiserror = "2.0.17"
ultros-api-types = {path = "../ultros-api-types"}
metrics = "0.24.3"
dotenvy = "0.15.7"
rkyv = { version = "0.7.42", features = ["validation", "size_64", "hashbrown"], default-features = false, optional = true }

[features]
rkyv = ["dep:rkyv"]
