[package]
name = "ultros-db"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm.workspace = true
universalis = {path = "../universalis"}
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
migration = {path = "../migration"}
sea-query.workspace = true
chrono = { workspace = true }
itertools.workspace = true
yoke.workspace = true
thiserror = { workspace = true }
ultros-api-types = {path = "../ultros-api-types"}
metrics = "0.24.5"
dotenvy = "0.15.7"
getrandom = "0.4.2"
rkyv = { version = "0.7.42", features = ["validation", "size_32", "hashbrown"], default-features = false, optional = true }

[features]
rkyv = ["dep:rkyv"]

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
