[package]
name = "ultros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universalis = {path = "../universalis", features = ["websocket"]}
ultros-db = {path = "../ultros-db"}
anyhow = {workspace = true}
axum = {version = "0.6.0", features = ["ws", "headers", "json"]}
axum-extra = {version = "0.7.4", features = ["cookie", "cookie-private"]}
xiv-gen-db = {path = "../xiv-gen-db", features = ["embed"]}
poise = {version = "0.5.6"}
chrono = "0.4.23"
lodestone = {git = "https://github.com/akarras/lodestone.git", branch = 'async', default-features = false, features = ["rustls-tls"]}
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
xiv-gen.workspace = true
serde = {version = "^1", features = ["derive"]}
include_dir = "0.7.2"
mime_guess = "2.0.4"
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = "0.3"
futures = {workspace = true}
oauth2 = "4.1"
async-trait = '0.1'
serde_json = "1.0.85"
thiserror = "1.0.36"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.0"
serde_with = "3.0.0"
tower-http = {version = "0.3.5", features = ["full"]}
sha2 = "0.10.6"
base64 = "0.21.0"
smallvec = {version = "1.10.0", features = ["const_generics", "const_new", "union"]}
itertools = "0.11.0"
sitemap-rs = "0.2.0"
ultros-api-types = {path = "../ultros-api-types"}
ultros-xiv-icons = {path = "../ultros-frontend/ultros-xiv-icons"}
leptos = {workspace = true, features = ["ssr"]}
leptos_axum.workspace = true
leptos_router = {workspace = true, features = ["ssr"]}
ultros-app = {path = "../ultros-frontend/ultros-app", features = ["ssr"]}
hyper = "0.14.24"
tokio-stream = {version = "0.1.12", features = ["sync"]}
ultros-charts = {path = "../ultros-frontend/ultros-charts", features = ["image"]}
plotters-svg = {version = "0.3.2", features = ["bitmap_encoder"]}
resvg = "0.33.0"
image.workspace = true