[package]
name = "ultros"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universalis = { path = "../universalis", features = ["websocket"] }
ultros-db = { path = "../ultros-db" }
anyhow = { workspace = true }
aide = { version = "0.15", features = ["macros", "axum", "axum-json"] }
schemars = { version = "0.8.16", features = ["derive"] }
axum.workspace = true
axum-extra.workspace = true
axum-macros = "0.5.0"
cookie = "0.18"
xiv-gen-db = { path = "../xiv-gen-db", features = ["embed"] }
poise = { version = "0.6.1" }
chrono = "0.4.23"
lodestone = { git = "https://github.com/akarras/lodestone.git", branch = 'async', default-features = false, features = [
    "rustls-tls",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
xiv-gen.workspace = true
serde = { version = "^1", features = ["derive"] }
include_dir = "0.7.2"
mime_guess = "2.0.4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
futures = { workspace = true }
oauth2 = "4.1"
async-trait = '0.1'
serde_json = "1.0.85"
thiserror = "1.0.36"
dotenvy = { workspace = true }
metrics = "0.24.3"
envy = "0.4"
metrics-exporter-prometheus = { version = "0.18.0", default-features = false }
serde_with = "3.0.0"
tower-http = { version = "0.6.6", features = ["full"] }
sha2 = "0.10.6"
base64 = "0.21.0"
smallvec = { version = "1.10.0", features = [
    "const_generics",
    "const_new",
    "union",
] }
itertools = "0.14.0"
sitemap-rs = "0.4.0"
ultros-api-types = { path = "../ultros-api-types", features = ["aide"] }
ultros-xiv-icons = { path = "../ultros-frontend/ultros-xiv-icons" }
leptos = { workspace = true, features = ["ssr", "nightly"] }
leptos_axum.workspace = true
leptos_router = { workspace = true, features = ["ssr"] }
ultros-app = { path = "../ultros-frontend/ultros-app", features = ["ssr"] }
hyper = "1.1.0"
tokio-stream = { version = "0.1.12", features = ["sync"] }
ultros-charts = { path = "../ultros-frontend/ultros-charts", features = [
    "image",
] }
plotters-svg = { version = "0.3.2", features = ["bitmap_encoder"] }
resvg = "0.33.0"
image.workspace = true
isocountry = "0.3.2"
git-const.workspace = true
http-body-util = "0.1.0"
arrayvec = "0.7.4"
tikv-jemallocator = { version = "0.6.1", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
], optional = true }
jemalloc_pprof = { version = "0.8.1", optional = true }
tantivy = "0.25.0"

[features]
profiling = ["dep:tikv-jemallocator", "dep:jemalloc_pprof"]
jemalloc = ["dep:tikv-jemallocator"]
default = []
