[package]
name = "ultros"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universalis = { path = "../universalis", features = ["websocket"] }
ultros-db = { path = "../ultros-db", features = ["rkyv"] }
anyhow = { workspace = true }
axum.workspace = true
axum-extra.workspace = true
axum-macros = { workspace = true }
cookie = "0.18.1"
xiv-gen-db = { path = "../xiv-gen-db", features = ["embed"] }
poise = { version = "0.6.2" }
chrono = { workspace = true }
lodestone = { git = "https://github.com/akarras/lodestone.git", branch = 'async', default-features = false, features = [
    "rustls-tls",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
xiv-gen.workspace = true
serde = { workspace = true }
include_dir = "0.7.4"
mime_guess = "2.0.5"
tokio = { workspace = true }
tokio-util = { version = "0.7.18" }
tracing = { workspace = true }
tracing-subscriber = "0.3"
futures = { workspace = true }
oauth2 = "5.0"
async-trait = "0.1.89"
serde_json = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
metrics = "0.24.5"
envy = "0.4.2"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["full"] }
sha2 = "0.11.0"
base64 = "0.22.1"
smallvec = { version = "1.10.0", features = [
    "const_generics",
    "const_new",
    "union",
] }
itertools = "0.14.0"
sitemap-rs = "0.4.0"
ultros-api-types = { path = "../ultros-api-types", features = ["rkyv"] }
ultros-xiv-icons = { path = "../ultros-frontend/ultros-xiv-icons" }
leptos = { workspace = true, features = ["ssr", "nightly"] }
leptos_axum.workspace = true
leptos_router = { workspace = true, features = ["ssr"] }
ultros-app = { path = "../ultros-frontend/ultros-app", features = ["ssr"] }
hyper = "1.9.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
ultros-charts = { path = "../ultros-frontend/ultros-charts", features = [
    "image",
] }
plotters-svg = { version = "0.3.7", features = ["bitmap_encoder"] }
resvg = "0.47.0"
image.workspace = true
isocountry = "0.3.2"
http-body-util = "0.1.3"
arrayvec = "0.7.6"
tikv-jemallocator = { version = "0.6.1", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
], optional = true }
jemalloc_pprof = { version = "0.8.2", optional = true }
tantivy = "0.26.1"
rkyv = { version = "0.7.42", features = ["validation", "arrayvec", "size_32"], default-features = false }
flate2 = "1.1.9"
url = "2.5.8"
sentry = { version = "0.48", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
] }
sentry-tracing = "0.48"
sentry-tower = { version = "0.48", features = ["http"] }
web-push = { workspace = true }
# `web-push` pulls in `openssl` transitively via `ece`. Pin the `vendored` feature here
# so cargo compiles OpenSSL from source (via `openssl-src`) instead of linking the
# system library. This means `cargo check`/`build` works on Windows MSVC without
# installing OpenSSL dev headers separately, and on Linux it removes the libssl-dev
# bootstrap requirement (CI still has libssl-dev installed; vendored is harmless there).
openssl = { version = "0.10", features = ["vendored"] }
# Direct dep so we can install a process-level CryptoProvider at startup.
# Transitive consumers (serenity, reqwest 0.12/0.13, sqlx, tokio-rustls, sentry) pull
# in rustls 0.23 with both `aws-lc-rs` and `ring` activated via feature unification,
# which makes `ClientConfig::builder()` panic with "Could not automatically determine
# the process-level CryptoProvider". We install one explicitly in `main()`.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

[dev-dependencies]
tempfile = "3.6.0"

[features]
profiling = ["dep:tikv-jemallocator", "dep:jemalloc_pprof"]
jemalloc = ["dep:tikv-jemallocator"]
# Exposes /test/login for E2E tests. Compile-time gated so prod binaries
# physically cannot contain this route. Build with: --features test-auth
test-auth = []
default = []
