[package]
name = "universalis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
thiserror = "1.0.32"
url = "2"
log = "0.4.17"
bson = "2.4.0"
async-tungstenite = {version = "0.20", default-features = false, features = ["tokio-runtime", "tokio-rustls-webpki-roots"], optional = true}
tokio = {version = "1", optional = true, features = ["full"]}
futures = "0.3.23"
serde_with = {version = "2.0.0", features = ["chrono"]}
chrono = {version = "0.4.23", features = ["serde"]}

[dev-dependencies]
pretty_env_logger = "0.4"
clap = {version = "4.0.18", features = ["derive"]}

[features]
default = ["websocket"]
websocket = ["async-tungstenite", "tokio"]


