[package]
name = "universalis"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", default-features = false, features = ["json", "rustls-tls"]}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2"
tracing = { workspace = true }
bson = { version = "3.1.0", features = ["serde"] }
async-tungstenite = {version = "0.34", default-features = false, features = ["tokio-runtime", "tokio-rustls-webpki-roots"], optional = true}
tokio = { workspace = true, optional = true }
futures = { workspace = true }
serde_with = {version = "3.20.0", features = ["chrono"]}
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
clap = {version = "4.0.18", features = ["derive"]}

[features]
default = ["websocket"]
websocket = ["async-tungstenite", "tokio"]
