[package]
name = "xiv-compiled-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
xivapi = {path = "../xivapi"}
codegen = "0.1.3"
lodestone = {git = "https://github.com/akarras/lodestone.git", branch = "async"}