[package]
name = "xiv-gen-db"
description = "Generates a database from xiv-gen's csv tables & provides a static entry point that compresses/decompresses the database"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# whether or not to embed game data
embed = []

[dependencies]
flate2 = "1.0.24"
bincode = {version = "2.0.0-rc.3"}
xiv-gen = {workspace = true, features = ["csv_to_bincode"]}
once_cell = "1"
anyhow.workspace = true

[build-dependencies]
xiv-gen = {workspace = true, features = ["csv_to_bincode"]}
serde = {version = "1.0.143", features = ["derive"]}
bincode = {version = "2.0.0-rc.3"}
flate2 = "1.0.24"
